--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,10 @@ services:
     build: build/nginx
     ports:
       - "80:80"
+    depends_on:
+      - flask
+    networks:
+      - mynetwork 
   flask:
     build:
       context: .
@@ -11,7 +15,9 @@ services:
     ports:
       - "5000:5000"
     networks:
-      - mynetwork
+      mynetwork:
+        aliases:
+          - flask-app
 
 networks:
   mynetwork:
